# ai-summarizer-api

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  api.http  compose.yml  main.py  pyproject.toml  requirements.txt
core/: config.py  logger.py  scraper.py
models/: job.py
routes/: job.py
schemas/: job.py
src/: main.py
src/core/: audio_generator.py  config.py  scraper.py  storage.py  summarizer.py
src/db/: database.py
src/models/: job.py
src/routes/: job.py
src/schemas/: job.py
src/worker/: celery_app.py
src/worker/tasks/: audio_generator.py  scrape.py  storage.py  summarize.py
worker/: celery_app.py
worker/tasks/: scrape.py  summarize.py
